# mptcplib

./: .gitignore  CHANGES.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yaml  ubuntu-20.yaml
mptcplib/: __init__.py  __init__.pyi  _common_constants.py  _interface.py  _mptcplib_linux.py  _mptcplib_structs.py  _utils.py
mptcplib/include/: _mptcplib_linux.h
mptcplib/src/: _mptcplib_linux.c
mptcplib/test/: __init__.py  test_io.py  test_socket.py
scripts/internal/: purge_installation.py
